#16: Ensure WKN uniqueness upon creating a new security; DB constraints as single source of truth